--- a/views/authentication/register.ejs
+++ b/views/authentication/register.ejs
@@ -15,6 +15,7 @@
 <body>
     <div class="home">
         <a href="/">&lt; Home</a>
+        <p id="snackbar"></p>
     </div>
     <div class="login-page">
         <span style="color:red; text-align:center" class="formError" id="formError"></span>
