--- a/views/select_venue/labs.ejs
+++ b/views/select_venue/labs.ejs
@@ -13,38 +13,38 @@
 
 </head>
 <body>
-  <p class="mainhead">Classrooms</p>
+  <p class="mainhead">Labs</p>
     <h4 class="heading">Department of Computer Science & Engineering</h4>
     <div class="row">
-        <a href="/select_venue/classes/cs107">
+        <a href="/select_venue/classes/cs356">
           <div class="col-md-3">
             <div class="card card-3">
-              <h3>CS-107</h3>
-              <p>Classroom with a maximum strength of 70</p>
+              <h3>CS-356</h3>
+              <p>Computer lab with a total of 44 systems</p>
             </div>
           </div>
         </a>
-        <a href="/select_venue/classes/cs117">
+        <a href="/select_venue/classes/cs454">
           <div class="col-md-3">
               <div class="card card-1">
-                <h3>CS-117</h3>
-                <p>Classroom with a maximum strength of 72</p>
+                <h3>CS-454</h3>
+                <p>Computer lab with a total of 38 systems</p>
               </div>
             </a>
           </div>  
           <div class="col-md-3">
-            <a href="/select_venue/classes/cs204">
+            <a href="/select_venue/classes/cs543">
               <div class="card card-2">
-                <h3>CS-204</h3>   
-                <p>Classroom with a maximum strength of 70</p>
+                <h3>CS-543</h3>   
+                <p>Computer lab with a total of 45 systems</p>
               </div>
             </a>
           </div>
           <div class="col-md-3">
-              <a href="/select_venue/classes/cs212">
+              <a href="/select_venue/classes/cs113">
               <div class="card card-2">
                 <h3>CS-212</h3>
-                <p>Classroom with a maximum strength of 75</p>
+                <p>Computer lab with a total of 52 systems</p>
               </div>
             </a>
           </div>
@@ -53,34 +53,26 @@
     <h4 class="heading">Department of Electronics & Communication</h4>
     <div class="row">
           <div class="col-md-3">
-            <a href="/select_venue/classes/ec252">
+            <a href="/select_venue/classes/ec342">
               <div class="card card-3">
-                <h3>EC-252</h3>
-                <p>Classroom with a maximum strength of 70</p>
+                <h3>EC-342</h3>
+                <p>Computer lab with a total of 44 systems</p>
               </div>
             </a>
           </div>
           <div class="col-md-3">
-            <a href="/select_venue/classes/ec212">
+            <a href="/select_venue/classes/ec117">
               <div class="card card-1">
-                <h3>EC-212</h3>
-                <p>Classroom with a maximum strength of 76</p>
+                <h3>EC-117</h3>
+                <p>Computer lab with a total of 33 systems</p>
               </div>
             </a>
           </div>
           <div class="col-md-3">
-            <a href="/select_venue/classes/ec208">
+            <a href="/select_venue/classes/ec423">
               <div class="card card-2">
-                <h3>EC-208</h3>
-                <p>Classroom with a maximum strength of 81</p>
-              </div>
-            </a>
-          </div>
-          <div class="col-md-3">
-            <a href="/select_venue/classes/ec221">
-              <div class="card card-2">
-                <h3>EC-221</h3>
-                <p>Classroom with a maximum strength of 72</p>
+                <h3>EC-423</h3>
+                <p>Computer lab with a total of 43 systems</p>
               </div>
             </a>
           </div>
