--- a/views/select_venue/lecture.ejs
+++ b/views/select_venue/lecture.ejs
@@ -3,7 +3,7 @@
 <head>
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <title>Select your Venue</title>
+    <title>Lecture Rooms - Select your Venue</title>
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link href="https://fonts.googleapis.com/css?family=Nunito:200,300,400,600,700,900" rel="stylesheet">
     <link rel="stylesheet" type="text/css" media="screen" href="../stylesheets/select_venue/classes.css">
@@ -13,38 +13,38 @@
 
 </head>
 <body>
-  <p class="mainhead">Classrooms</p>
+  <p class="mainhead">Lecture Rooms</p>
     <h4 class="heading">Department of Computer Science & Engineering</h4>
     <div class="row">
-        <a href="/select_venue/classes/cs107">
+        <a href="/select_venue/classes/cs222">
           <div class="col-md-3">
             <div class="card card-3">
-              <h3>CS-107</h3>
-              <p>Classroom with a maximum strength of 70</p>
+              <h3>CS-222</h3>
+              <p>Lecture room with a maximum strength of 70 and prjector</p>
             </div>
           </div>
         </a>
-        <a href="/select_venue/classes/cs117">
+        <a href="/select_venue/classes/cs111">
           <div class="col-md-3">
               <div class="card card-1">
-                <h3>CS-117</h3>
-                <p>Classroom with a maximum strength of 72</p>
+                <h3>CS-111</h3>
+                <p>Lecture room with a maximum strength of 74</p>
               </div>
             </a>
           </div>  
           <div class="col-md-3">
-            <a href="/select_venue/classes/cs204">
+            <a href="/select_venue/classes/cs123">
               <div class="card card-2">
-                <h3>CS-204</h3>   
-                <p>Classroom with a maximum strength of 70</p>
+                <h3>CS-123</h3>   
+                <p>Lecture room with a maximum strength of 65 and prjector</p>
               </div>
             </a>
           </div>
           <div class="col-md-3">
-              <a href="/select_venue/classes/cs212">
+              <a href="/select_venue/classes/cs321">
               <div class="card card-2">
-                <h3>CS-212</h3>
-                <p>Classroom with a maximum strength of 75</p>
+                <h3>CS-321</h3>
+                <p>Lecture room with a maximum strength of 80 and prjector</p>
               </div>
             </a>
           </div>
@@ -53,34 +53,34 @@
     <h4 class="heading">Department of Electronics & Communication</h4>
     <div class="row">
           <div class="col-md-3">
-            <a href="/select_venue/classes/ec252">
+            <a href="/select_venue/classes/ec223">
               <div class="card card-3">
-                <h3>EC-252</h3>
-                <p>Classroom with a maximum strength of 70</p>
+                <h3>EC-223</h3>
+                <p>Lecture room with a maximum strength of 65</p>
               </div>
             </a>
           </div>
           <div class="col-md-3">
-            <a href="/select_venue/classes/ec212">
+            <a href="/select_venue/classes/ec432">
               <div class="card card-1">
-                <h3>EC-212</h3>
-                <p>Classroom with a maximum strength of 76</p>
+                <h3>EC-432</h3>
+                <p>Lecture room with a maximum strength of 86 and prjector</p>
               </div>
             </a>
           </div>
           <div class="col-md-3">
-            <a href="/select_venue/classes/ec208">
+            <a href="/select_venue/classes/ec200">
               <div class="card card-2">
                 <h3>EC-208</h3>
-                <p>Classroom with a maximum strength of 81</p>
+                <p>Lecture room with a maximum strength of 76</p>
               </div>
             </a>
           </div>
           <div class="col-md-3">
-            <a href="/select_venue/classes/ec221">
+            <a href="/select_venue/classes/ec250">
               <div class="card card-2">
                 <h3>EC-221</h3>
-                <p>Classroom with a maximum strength of 72</p>
+                <p>Lecture room with a maximum strength of 60 and prjector</p>
               </div>
             </a>
           </div>
