--- a/views/select_venue/main.ejs
+++ b/views/select_venue/main.ejs
@@ -13,35 +13,34 @@
 
 </head>
 <body>
-  <p class="mainhead">Classrooms</p>
-    <h4 class="heading">Department of Computer Science & Engineering</h4>
+  <p class="mainhead">Main Rooms</p>
     <div class="row">
-        <a href="/select_venue/classes/cs107">
+        <a href="/select_venue/main/cetaa">
           <div class="col-md-3">
             <div class="card card-3">
               <h3>CS-107</h3>
-              <p>Classroom with a maximum strength of 70</p>
+              <p>CETAA Hall</p>
             </div>
           </div>
         </a>
-        <a href="/select_venue/classes/cs117">
+        <a href="/select_venue/main/ccf">
           <div class="col-md-3">
               <div class="card card-1">
-                <h3>CS-117</h3>
+                <h3>Central Computing Facility</h3>
                 <p>Classroom with a maximum strength of 72</p>
               </div>
             </a>
           </div>  
           <div class="col-md-3">
-            <a href="/select_venue/classes/cs204">
+            <a href="/select_venue/main/dj">
               <div class="card card-2">
-                <h3>CS-204</h3>   
+                <h3>DJ Hall</h3>   
                 <p>Classroom with a maximum strength of 70</p>
               </div>
             </a>
           </div>
           <div class="col-md-3">
-              <a href="/select_venue/classes/cs212">
+              <a href="/select_venue/main/cs212">
               <div class="card card-2">
                 <h3>CS-212</h3>
                 <p>Classroom with a maximum strength of 75</p>
@@ -50,10 +49,9 @@
           </div>
     </div>
 
-    <h4 class="heading">Department of Electronics & Communication</h4>
     <div class="row">
           <div class="col-md-3">
-            <a href="/select_venue/classes/ec252">
+            <a href="/select_venue/main/ec252">
               <div class="card card-3">
                 <h3>EC-252</h3>
                 <p>Classroom with a maximum strength of 70</p>
@@ -61,7 +59,7 @@
             </a>
           </div>
           <div class="col-md-3">
-            <a href="/select_venue/classes/ec212">
+            <a href="/select_venue/main/ec212">
               <div class="card card-1">
                 <h3>EC-212</h3>
                 <p>Classroom with a maximum strength of 76</p>
@@ -69,7 +67,7 @@
             </a>
           </div>
           <div class="col-md-3">
-            <a href="/select_venue/classes/ec208">
+            <a href="/select_venue/main/ec208">
               <div class="card card-2">
                 <h3>EC-208</h3>
                 <p>Classroom with a maximum strength of 81</p>
@@ -77,7 +75,7 @@
             </a>
           </div>
           <div class="col-md-3">
-            <a href="/select_venue/classes/ec221">
+            <a href="/select_venue/main/ec221">
               <div class="card card-2">
                 <h3>EC-221</h3>
                 <p>Classroom with a maximum strength of 72</p>
