--- a/public/stylesheets/venue.css
+++ b/public/stylesheets/venue.css
@@ -18,21 +18,34 @@ body {
 #heading {
     grid-row: 1/2;
     color: black;
+    text-align: center;
+    /* background-color: #979ba8; */
 
 }
 
 #pic {
     grid-row: 2/3;
-    background-color: rgb(255, 255, 255);
+    /* background-color: rgb(73, 63, 212); */
     padding: 1rem;
-    -webkit-box-shadow: 0px 3px 30px -7px #0031ca;
+    /* -webkit-box-shadow: 0px 3px 30px -7px #0031ca;
     -moz-box-shadow: 0px 3px 30px -7px #0031ca;
-    box-shadow: 0px 3px 30px -7px #0031ca;
+    box-shadow: 0px 3px 30px -7px #0031ca; */
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    overflow: hidden
+}
+
+#fill img {
+    flex-shrink: 0;
+    min-width: 100%;
+    min-height: 100%
 }
 
 #details {
     grid-row: 3/4;
-    background-color: aliceblue;
+    text-align: center;
+    /* background-color: rgb(18, 145, 177); */
 }
 
 #calendar {
