--- a/views/private/admin/dashboard.ejs
+++ b/views/private/admin/dashboard.ejs
@@ -6,6 +6,7 @@
     <title>User</title>
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link rel="stylesheet" type="text/css" media="screen" href="../../stylesheets/admin_dashboard.css" />
+    <link rel="stylesheet" type="text/css" media="screen" href="../../stylesheets/toast.css" />
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous">
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap-theme.min.css" integrity="sha384-rHyoN1iRsVXV4nD0JutlnGaslCJuC7uwjduW9SVrLvRYooPp2bWYgmgJQIXwl/Sp" crossorigin="anonymous">
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js" integrity="sha384-Tc5IQib027qvyjSMfHjOMaLkfuWVxZxUPnCJA7l2mCWNIpG9mGCD8wGNIcPD7Txa" crossorigin="anonymous"></script>
@@ -23,8 +24,9 @@
     <div id= "head">
       <ul>
         <li id="hello"></li>
-        <li style="float:right;"><a href="/authentication/logout " onclick="logOut()" >Logout</a></li>  
-      </ul>        
+        <li style="float:right;"><a href="/authentication/logout" onclick="logOut()" >Logout</a></li>  
+      </ul>  
+      <p id="snackbar"></p>      
     </div> 
       <div id="content_calendar">
         <div id="content">
