--- a/views/venue.ejs
+++ b/views/venue.ejs
@@ -6,6 +6,8 @@
     <title>Venue information</title>
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link rel="stylesheet" type="text/css" media="screen" href="../../stylesheets/venue.css" />
+    <link rel="stylesheet" type="text/css" media="screen" href="../../stylesheets/toast.css" />
+    <script src="../../javascripts/functions.js"></script>
 
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous">
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap-theme.min.css" integrity="sha384-rHyoN1iRsVXV4nD0JutlnGaslCJuC7uwjduW9SVrLvRYooPp2bWYgmgJQIXwl/Sp" crossorigin="anonymous">
@@ -14,19 +16,29 @@
     <link href= "../../fullcalendar-4.0.1/packages/core/main.css" rel= "stylesheet"/>
     <link href= "../../fullcalendar-4.0.1/packages/daygrid/main.css" rel= "stylesheet"/>
     <link href= "../../fullcalendar-4.0.1/packages/bootstrap/main.css" rel= "stylesheet"/>
+    <style>
+      * {
+        font-family: 'Roboto', sans-serif;
+      }
+    </style>
 </head>
 
 <body>
-    
+
     <div id= "venue">
       <div id="heading">
-        
+          <h2><%=data.venue_name%></h2>
+          <h2 style="display: none;" id="hey"><%=data.venue_code%> </h2>
       </div>
       <div id="pic">
-
+        <img src="../../images/cetaa.jpg" height="500px" width="950px"/>
       </div>
       <div id="details">
-
+        <p>
+            <h3>Capacity: 82 </h3>
+            <h3>Incharge Name: <%=data.name%></h3>
+            <h3>Incharge Contact No.: <%=data.phone_no%></h3>
+        </p>
       </div>
     </div>
     <div id= "calendar">
@@ -38,7 +50,8 @@
 <script src="../../fullcalendar-4.0.1/packages/daygrid/main.js"></script>
 <script src="../../fullcalendar-4.0.1/packages/bootstrap/main.js"></script>
 <script >
-document.addEventListener('DOMContentLoaded', function() {
+  var x = document.getElementById("hey").innerHTML;
+  document.addEventListener('DOMContentLoaded', function() {
     var calendarEl = document.getElementById('calendar');
 
     var calendar = new FullCalendar.Calendar(calendarEl, {
@@ -46,8 +59,8 @@ document.addEventListener('DOMContentLoaded', function() {
       themeSystem: 'bootstrap',
       displayEventTime: false,
       eventSources: [ {
-      // your event source
-        url: '/calendar/loadForVenue',
+      // your event source- Goand complete the below route
+        url: `/calendar/loadVenueByCode/${x}`,
         method: 'POST',
         failure: function() {
           alert('there was an error while fetching events!');
@@ -57,6 +70,7 @@ document.addEventListener('DOMContentLoaded', function() {
 
     calendar.render();
   });
+
 
 </script>
 </html>
