--- a/views/private/incharge/add_event.ejs
+++ b/views/private/incharge/add_event.ejs
@@ -20,7 +20,7 @@
           <input type="text" placeholder="Coordinator's Contact No" id="coordinator_phone" />
           <input type="time" placeholder="Start Time" id="start_time" />
           <input type="time" placeholder="End Time" id="end_time" />
-          <button onclick="AddEvent()">Register</button>
+          <button onclick="AddEvent()">Create Event</button>
         </div>
     </div>
     
