--- a/views/select_venue/classes.ejs
+++ b/views/select_venue/classes.ejs
@@ -13,6 +13,9 @@
 
 </head>
 <body>
+    <div class="home">
+        <a href="/">&lt; Home</a>
+    </div>
   <p class="mainhead">Classrooms</p>
     <h4 class="heading">Department of Computer Science & Engineering</h4>
     <div class="row">
