--- a/views/select_venue/main.ejs
+++ b/views/select_venue/main.ejs
@@ -13,12 +13,17 @@
 
 </head>
 <body>
+
+    <div class="home">
+        <a href="/">&lt; Home</a>
+    </div>
+
   <p class="mainhead">Main Rooms</p>
     <div class="row">
         <a href="/select_venue/main/cetaa">
           <div class="col-md-3">
             <div class="card card-3">
-              <h3>CS-107</h3>
+              <h3>CETAA Hall</h3>
               <p>CETAA Hall</p>
             </div>
           </div>
@@ -39,49 +44,7 @@
               </div>
             </a>
           </div>
-          <div class="col-md-3">
-              <a href="/select_venue/main/cs212">
-              <div class="card card-2">
-                <h3>CS-212</h3>
-                <p>Classroom with a maximum strength of 75</p>
-              </div>
-            </a>
-          </div>
-    </div>
-
-    <div class="row">
-          <div class="col-md-3">
-            <a href="/select_venue/main/ec252">
-              <div class="card card-3">
-                <h3>EC-252</h3>
-                <p>Classroom with a maximum strength of 70</p>
-              </div>
-            </a>
-          </div>
-          <div class="col-md-3">
-            <a href="/select_venue/main/ec212">
-              <div class="card card-1">
-                <h3>EC-212</h3>
-                <p>Classroom with a maximum strength of 76</p>
-              </div>
-            </a>
-          </div>
-          <div class="col-md-3">
-            <a href="/select_venue/main/ec208">
-              <div class="card card-2">
-                <h3>EC-208</h3>
-                <p>Classroom with a maximum strength of 81</p>
-              </div>
-            </a>
-          </div>
-          <div class="col-md-3">
-            <a href="/select_venue/main/ec221">
-              <div class="card card-2">
-                <h3>EC-221</h3>
-                <p>Classroom with a maximum strength of 72</p>
-              </div>
-            </a>
-          </div>
+          
     </div>
 </body>
 
