--- a/views/venue.ejs
+++ b/views/venue.ejs
@@ -25,6 +25,10 @@
 
 <body>
 
+   <div class="home">
+        <a href="/">&lt; Home</a>
+    </div>
+
     <div id= "venue">
       <div id="heading">
           <h2><%=data.venue_name%></h2>
