--- a/public/stylesheets/select_venue/classes.css
+++ b/public/stylesheets/select_venue/classes.css
@@ -73,3 +73,10 @@ body {
 .row>p {
   text-decoration: none !important;
 }
+  
+.home a {
+  font-size: 24px;
+  text-decoration: none;
+  color: black;
+}
+
