--- a/public/stylesheets/venue.css
+++ b/public/stylesheets/venue.css
@@ -60,3 +60,8 @@ body {
 .fc-event-inner {
     border: 5px solid red;
 }
+.home a {
+    font-size: 24px;
+    text-decoration: none;
+    color: black;
+  }
