--- a/views/error.ejs
+++ b/views/error.ejs
@@ -5,10 +5,13 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <title>Venue Not Found</title>
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <link rel="stylesheet" type="text/css" media="screen" href="main.css">
     <script src="main.js"></script>
 </head>
 <body>
+        <div style="font-size: 24px;" class="home">
+                <a href="/">&lt; Home</a>
+            </div>
+        
     <h1>
         Oops..!looks like the Venue doesn't exist..!<br/><br/>Sorry for the inconvenience..:(
     </h1>
